fix: light background was too dark

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,9 +7,9 @@
     --primary: 81 95% 54%;
     --primary-foreground: 0 0% 6%;
 
-    --background: 0 0% 95%;
+    --background: 0 0% 97.5%;
     --foreground: 240 10% 3.9%;
-    --card: 0 0% 98%;
+    --card: 0 0% 99%;
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
